--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "json": "json-server --watch ./data/db.json --port 5000"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
